Dash Margin fix in wrapeer

--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -119,6 +119,7 @@ li#toplevel_page_ultraaddons-elementor-lite.wp-has-submenu.wp-has-current-submen
     border-radius: 0;
     margin-top: 0;
     color: #000;
+    margin: 0 15px 0px 0px;
     max-width: 100%;
 }
 
